--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
             <div class="hero-content">
                 <h1>Hello, I'm <span style="color: #0066cc;">Divya Shah</span></h1>
                 <p>I'm a Full Stack Developer/Devops/ML/Tech Enthusiast specializing in creating exceptional work and automating things.<br>Welcome to my portfolio.</p>
-                <a href="#contact" class="cta-button">Get In Touch</a>
+<!--                <a href="#contact" class="cta-button">Get In Touch</a>-->
             </div>
             <div class="hero-image">
                 <img src="DivyaShah.jpg" alt="Your Profile Picture">
